--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,14 @@
 			<version>1.2.17</version>
 		</dependency>
 
+		<!-- poi -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.9</version>
+		</dependency>
+
+
 		<!-- Hibernate -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
