--- a/pom.xml
+++ b/pom.xml
@@ -236,6 +236,16 @@
 							<warName>ROOT</warName>
 						</configuration>
 					</plugin>
+					<plugin>
+						<groupId>org.apache.tomcat.maven</groupId>
+						<artifactId>tomcat7-maven-plugin</artifactId>
+						<version>2.2</version>
+						<configuration>
+							<url>http://localhost:8080/manager/text</url>
+							<server>tomcat8</server>
+							<path>/</path>
+						</configuration>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
