--- a/pom.xml
+++ b/pom.xml
@@ -241,6 +241,12 @@
                                                         <password>Pa55</password>
 						</configuration>
 					</plugin>
+                                        <plugin> 
+                                                <groupId>org.wildfly.plugins</groupId> 
+                                                <artifactId>wildfly-maven-plugin</artifactId> 
+                                                <version>1.1.0.Alpha4</version>
+                                                <configuration> <skip>true</skip> </configuration> 
+                                        </plugin>
 				</plugins>
 			</build>
 		</profile>
